--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".AddCounterActivity" />
-        <activity android:name=".EditCounterActivity"></activity>
+        <activity android:name=".EditCounterActivity" />
+        <activity android:name=".ChangeValuesActivity"></activity>
     </application>
 
 </manifest>
